--- a/fhir-avro/pom.xml
+++ b/fhir-avro/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.hl7.fhir.avro</groupId>
+  <groupId>io.carrera.fhir.avro</groupId>
   <artifactId>fhir-avro</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -9,16 +9,10 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>org.apache.avro</groupId>
+      <artifactId>avro</artifactId>
+      <version>1.9.2</version>
     </dependency>
-    <dependency>
-  <groupId>org.apache.avro</groupId>
-  <artifactId>avro</artifactId>
-  <version>1.9.1</version>
-</dependency>
   </dependencies>
 
 <build>
@@ -26,7 +20,7 @@
   <plugin>
   <groupId>org.apache.avro</groupId>
   <artifactId>avro-maven-plugin</artifactId>
-  <version>1.9.1</version>
+  <version>1.9.2</version>
   <executions>
     <execution>
       <phase>generate-sources</phase>
