--- a/fhir-avro/pom.xml
+++ b/fhir-avro/pom.xml
@@ -38,13 +38,16 @@
             <import>${project.basedir}/src/main/avro/Coding.avsc</import>
             <import>${project.basedir}/src/main/avro/CodeableConcept.avsc</import>
             <import>${project.basedir}/src/main/avro/Reference.avsc</import>
+            <import>${project.basedir}/src/main/avro/SimpleCode.avsc</import>
             <import>${project.basedir}/src/main/avro/ValueSetPointer.avsc</import>
+            <import>${project.basedir}/src/main/avro/ValueSet.avsc</import>
             <import>${project.basedir}/src/main/avro/identifier_record.avsc</import>
             <import>${project.basedir}/src/main/avro/name_record.avsc</import>
             <import>${project.basedir}/src/main/avro/Patient.avsc</import>
             <import>${project.basedir}/src/main/avro/Condition_Stage.avsc</import>
             <import>${project.basedir}/src/main/avro/Condition.avsc</import>
             <import>${project.basedir}/src/main/avro/MedicationStatement.avsc</import>
+            <import>${project.basedir}/src/main/avro/AllergyIntolerance_Reaction.avsc</import>
             <import>${project.basedir}/src/main/avro/AllergyIntolerance.avsc</import>
             <import>${project.basedir}/src/main/avro/Observation.avsc</import>
             <import>${project.basedir}/src/main/avro/Range.avsc</import>
