--- a/fhir-avro/pom.xml
+++ b/fhir-avro/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
-      <version>1.9.2</version>
+      <version>1.10.2</version>
     </dependency>
   </dependencies>
 
@@ -20,7 +20,7 @@
   <plugin>
   <groupId>org.apache.avro</groupId>
   <artifactId>avro-maven-plugin</artifactId>
-  <version>1.9.2</version>
+  <version>1.10.2</version>
   <executions>
     <execution>
       <phase>generate-sources</phase>
@@ -34,6 +34,7 @@
          <include>**/*.avsc</include>
         </includes>
         <imports>
+            <import>${project.basedir}/src/main/avro/DateTime.avsc</import>
             <import>${project.basedir}/src/main/avro/Quantity.avsc</import>
             <import>${project.basedir}/src/main/avro/Coding.avsc</import>
             <import>${project.basedir}/src/main/avro/CodeableConcept.avsc</import>
